<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Cancel">Cancel</string>
    <string name="Connect_Failed">Connection failed,please refresh</string>
    <string name="Connecting">Connecting...</string>
    <string name="Consumption_Warning">You are using 3G/4G network, please note your network flow consumption or use WiFi</string>
    <string name="Detail_Info">Detailed information</string>
    <string name="Device_Busy">Device is busy now</string>
    <string name="Error">Error Code:</string>
    <string name="Error_Prompt">Error prompt</string>
    <string name="Hour">Hour</string>
    <string name="Minute">Minute</string>
    <string name="No_Video">No Video</string>
    <string name="Ok">Ok</string>
    <string name="PassWord_Too_Long_Prompt">Password is too long</string>
    <string name="Play_Completed">PlayBack completed</string>
    <string name="Play_Failed_Reconnet">Is buffering, please later</string>
    <string name="Play_Opening">Is buffering, please later</string>
    <string name="State_Cannot_Play">"Forwarding Channels Limited 
 Please double click to check"</string>
    <string name="Sure">Sure</string>
    <string name="Video_Hint">Video open success</string>
    <string name="Waiting">Waiting...</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">XMCSee</string>
    <string name="app_name_debug">XMCSee Beta</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="default_web_client_id">758495546008-rrdvi7gglplqr5kr47vno2sedfggrn4r.apps.googleusercontent.com</string>
    <string name="enter_pass">Input password</string>
    <string name="enter_pass_again">Enter password again</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://xmcsee.firebaseio.com</string>
    <string name="gcm_defaultSenderId">758495546008</string>
    <string name="google_api_key">AIzaSyBXSe7dVvzAtjf9TD-JcLSh9WYwjdGOwXY</string>
    <string name="google_app_id">1:758495546008:android:dfb3abb44116e157</string>
    <string name="google_crash_reporting_api_key">AIzaSyBXSe7dVvzAtjf9TD-JcLSh9WYwjdGOwXY</string>
    <string name="google_storage_bucket">xmcsee.appspot.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="modify_e">Modify Password</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
